# gpx-extractor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  WARP.md  clippy.toml  dev.sh  rustfmt-nightly.toml  rustfmt.toml  test_with_metadata.gpx
examples/: analyze_gpx_file.rs  create_gpx.rs  duration_stats.rs  gpx_to_xml_demo.rs  parse_gpx.rs
src/: lib.rs  main.rs
src/gpx/: gpx.rs  mod.rs  parser.rs  point.rs  track.rs  waypoint.rs
